<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/etUserID"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center|center_vertical"
    tools:context=".NewPassword">

    <Button
        android:id="@+id/btnSave"
        android:layout_width="133dp"
        android:layout_height="0dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etWebsite" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="@+id/etUserid"
        app:layout_constraintTop_toBottomOf="@+id/etUserid" />

    <EditText
        android:id="@+id/etWebsite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="1dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/etPassword"
        app:layout_constraintTop_toBottomOf="@+id/etPassword" />

    <EditText
        android:id="@+id/etUserid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="9dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="@+id/etTitle"
        app:layout_constraintTop_toBottomOf="@+id/etTitle" />

    <TextView
        android:id="@+id/tvWebsite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:singleLine="true"
        android:text="@string/website"
        android:textColor="#0C0C0C"
        app:layout_constraintBaseline_toBaselineOf="@+id/etWebsite"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/password"
        android:textColor="#0C0C0C"
        app:layout_constraintBaseline_toBaselineOf="@+id/etPassword"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvUserID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="33dp"
        android:layout_marginBottom="196dp"
        android:text="@string/user_id"
        android:textColor="#0C0C0C"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="11dp"
        android:text="@string/title"
        android:textColor="#0C0C0C"
        app:layout_constraintBottom_toBottomOf="@+id/etTitle"
        app:layout_constraintEnd_toEndOf="@+id/tvUserID" />

    <EditText
        android:id="@+id/etTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="17dp"
        android:layout_marginBottom="24dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/tvUserID"
        app:layout_constraintStart_toEndOf="@+id/tvTitle" />

    <Button
        android:id="@+id/btnCancel"
        android:layout_width="133dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:text="@string/cancel"
        app:layout_constraintBottom_toBottomOf="@+id/btnSave"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btnSave" />

    <CheckBox
        android:id="@+id/cbNumbers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:gravity="center|center_horizontal|center_vertical"
        android:text="@string/numbers_n_0_9"
        app:layout_constraintBaseline_toBaselineOf="@+id/cbUpperCase"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tvHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="23dp"
        android:text="@string/new_password"
        android:textColor="#0C0C0C"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/cbSpecialChars"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="207dp"
        android:layout_marginEnd="6dp"
        android:layout_marginBottom="207dp"
        android:text="@string/special_characters"
        app:layout_constraintBottom_toTopOf="@+id/tvTitle"
        app:layout_constraintEnd_toStartOf="@+id/cbNumbers"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/cbLowerCase"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:checked="true"
        android:editable="false"
        android:gravity="center|center_vertical"
        android:text="@string/lower_case_n_a_z"
        app:layout_constraintBaseline_toBaselineOf="@+id/cbUpperCase"
        app:layout_constraintStart_toStartOf="parent" />

    <CheckBox
        android:id="@+id/cbUpperCase"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="20dp"
        android:gravity="center|center_horizontal|center_vertical"
        android:text="@string/upper_case_n_a_z"
        app:layout_constraintBottom_toTopOf="@+id/cbSpecialChars"
        app:layout_constraintStart_toEndOf="@+id/cbLowerCase" />

    <EditText
        android:id="@+id/etNumOfCharacters"
        android:layout_width="0dp"
        android:layout_height="42dp"
        android:layout_marginStart="39dp"
        android:layout_marginTop="42dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="32dp"
        android:ems="10"
        android:gravity="center|center_vertical"
        android:inputType="number"
        android:text="10"
        app:layout_constraintBottom_toTopOf="@+id/cbNumbers"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvNoOfCharacters"
        app:layout_constraintTop_toTopOf="@+id/tvHeader" />

    <TextView
        android:id="@+id/tvNoOfCharacters"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="55dp"
        android:layout_marginTop="27dp"
        android:text="@string/number_of_characters"
        android:textColor="#0C0C0C"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvHeader" />

    <Button
        android:id="@+id/btnGenerate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="19dp"
        android:text="@string/generate"
        app:layout_constraintEnd_toEndOf="@+id/cbSpecialChars"
        app:layout_constraintTop_toBottomOf="@+id/cbSpecialChars" />

</androidx.constraintlayout.widget.ConstraintLayout>